full text highlight

--- a/static/templates/index.tmpl.html
+++ b/static/templates/index.tmpl.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/plug-ins/1.10.22/features/searchHighlight/dataTables.searchHighlight.css">
   <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bulma.min.css"> -->
   <title>k8l - {{ .title }}</title>
 </head>
@@ -59,7 +60,9 @@
   </section>
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script> -->
+  <script src="https://bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.22/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
   <script>
     $(document).ready(function() {
       var table = $('#logs').DataTable( {
@@ -72,7 +75,16 @@
         ]
       } );
 
-      // 
+      $(document).ready( function () {
+          var table = $('#logs').DataTable();
+      
+          table.on( 'draw', function () {
+              var body = $( table.table().body() );
+      
+              body.unhighlight();
+              body.highlight( table.search().replace(/\*/g, "") );  
+          } );
+      } );
 
       // load namespaces
       $.ajax({
